--- a/index.html
+++ b/index.html
@@ -10,9 +10,15 @@
 </head>
 
 <body>
-    
+   
+   <div id="container">
+       <ul id="ul">
 
-
+       </ul>
+   </div>
+   <div id="div">
+       
+   </div>
 
 <script src="./script/main.js"></script>
 
