--- a/index.html
+++ b/index.html
@@ -10,8 +10,20 @@
 </head>
 
 <body>
-   
-  
+    <!-- // Задания1 -->
+<!-- <img src="./img/ff.png" onload="addMessage('ff.png load Ok')" onerror="addMessage('ff.png load error;')">
+<img src="./img/fla.jpeg" onload="addMessage('fla.jpeg load Ok')" onerror="addMessage('fla.jpeg load error;')">
+<img src="./img/fla1.jpeg" onload="addMessage('fla1.jpeg load Ok')" onerror="addMessage('fla1.jpeg load error;')">
+<p id="text"></p> -->
+<!-- // Задания2 -->
+<form  action="">
+    <label for="GET-name">Name:</label><br/>
+    <input id="GET-name" type="text" name="name"> 
+    <br/>
+    <input id="GET" type="email" name="user_email"> 
+    <input type="submit" value="Save">
+  </form>
+  <a href="https://github.com/sanyaskuz/-Js">git</a>
 
 <script src="./script/main.js"></script>
 
