--- a/index.html
+++ b/index.html
@@ -11,19 +11,23 @@
 
 <body>
     <!-- // Задания1 -->
-<!-- <img src="./img/ff.png" onload="addMessage('ff.png load Ok')" onerror="addMessage('ff.png load error;')">
-<img src="./img/fla.jpeg" onload="addMessage('fla.jpeg load Ok')" onerror="addMessage('fla.jpeg load error;')">
-<img src="./img/fla1.jpeg" onload="addMessage('fla1.jpeg load Ok')" onerror="addMessage('fla1.jpeg load error;')">
-<p id="text"></p> -->
-<!-- // Задания2 -->
-<form  action="">
-    <label for="GET-name">Name:</label><br/>
-    <input id="GET-name" type="text" name="name"> 
-    <br/>
-    <input id="GET" type="email" name="user_email"> 
-    <input type="submit" value="Save">
-  </form>
-  <a href="https://github.com/sanyaskuz/-Js">git</a>
+<h1>Lorem, ipsum dolor.</h1>
+<p class="a">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe deleniti inventore numquam harum, quibusdam similique! Architecto suscipit, sit, facere eveniet modi excepturi nesciunt laudantium sint deleniti asperiores, quam enim provident?</p>
+<hr>
+<h2 id="name1"></h2>
+<p id="dat1"></p>
+<p class="bor" id="comments"></p>
+<hr>
+<h2>Leave you comment</h2>
+<form>
+    <label>Name<input id="InpName"></label>
+    <br>
+    <label>Comment<br><textarea id="comment" cols="29" rows="5"></textarea></label>
+    <br>
+    <input id="btnOK" type="reset" value="OK" class="btn">
+    <br>
+    <input id="btnShow" type="button" value='Show all' class="btn">
+</form>
 
 <script src="./script/main.js"></script>
 
