--- a/index.html
+++ b/index.html
@@ -10,25 +10,11 @@
 </head>
 
 <body>
-    <!-- // Задания1 -->
-<h1>Lorem, ipsum dolor.</h1>
-<p class="a">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe deleniti inventore numquam harum, quibusdam similique! Architecto suscipit, sit, facere eveniet modi excepturi nesciunt laudantium sint deleniti asperiores, quam enim provident?</p>
-<hr>
-<h2 id="name1"></h2>
-<p id="dat1"></p>
-<p class="bor" id="comments"></p>
-<hr>
-<h2>Leave you comment</h2>
-<form>
-    <label>Name<input id="InpName"></label>
-    <br>
-    <label>Comment<br><textarea id="comment" cols="29" rows="5"></textarea></label>
-    <br>
-    <input id="btnOK" type="reset" value="OK" class="btn">
-    <br>
-    <input id="btnShow" type="button" value='Show all' class="btn">
-</form>
+<div id="tableContainer">
 
+</div>  
+
+    
 <script src="./script/main.js"></script>
 
 </body>
