--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 </head>
 
 <body>
-<div id="tableContainer">
-
-</div>  
+<!-- <ul id = 'UL'>Yor Text!</ul> -->
 
     
 <script src="./script/main.js"></script>
