--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
 
 <body>
 <!-- <ul id = 'UL'>Yor Text!</ul> -->
-
+<div class="div">
+    <div class="di" id="oneDiv"></div>
+    <div class="di" id="twoDiv"></div>
+    <div class="di" id="threeDiv" ></div>
+    <button id="btn">Next</button>
+</div>
     
 <script src="./script/main.js"></script>
 
