--- a/comment.html
+++ b/comment.html
@@ -11,9 +11,72 @@
 
 </style>
 <body>
- 
+ <!-- <img src="" alt=""> -->
  <script>
+var cookie = document.cookie;
+window.addEventListener('DOMContentLoaded', function(){
+  get(cookie)
+  .then(function(text){
 
+  let divText = document.createElement('div');
+  divText.style.marginLeft = '25px';
+  let divImg = document.createElement('div');
+  divImg.style.marginLeft = '25px';
+  let divFlex = document.createElement('div');
+  divFlex.style.display = 'flex';
+  divFlex.style.marginTop = '30px';
+  divFlex.style.border = '1px solid bleck';
+  divFlex.style.backgroundColor = 'lawngreen';
+  let h1Titel = document.createElement('h1');
+  let genre = document.createElement('p');
+  let Poster = document.createElement('img');
+  let Released = document.createElement('p');
+  let Plot = document.createElement('p');
+  let Country = document.createElement('p');
+  Poster.style.width = '175px';
+  Poster.style.height = '275px';
+
+  divText.append(h1Titel);
+  divText.append(Released);
+  divText.append(genre);
+  divText.append(Plot);
+  divText.append(Country);
+  divImg.append(Poster);
+  divFlex.append(divImg);
+  divFlex.append(divText);
+  document.body.append(divFlex);
+
+    var parsJson = JSON.parse(text);
+    console.log(parsJson);
+    Poster.src = parsJson.Poster;
+    h1Titel.innerHTML = parsJson.Title;
+    genre.innerHTML = parsJson.Genre;
+    Released.innerHTML = parsJson.Released;
+    Plot.innerHTML = parsJson.Plot;
+    Country.innerHTML = parsJson.Country;
+  },function(error){
+    alert('error');
+    alert(error);
+  });
+});
+
+function get(url){
+  return new Promise(function(succeed, fail){
+    let request = new XMLHttpRequest();
+    request.open("GET", url);
+    request.addEventListener("load", function(){
+      if(request.readyState == 4 && request.status == 200){
+      succeed(request.responseText);
+      }else
+      fail(new Error("Fail"));
+      
+    });
+    request.addEventListener('error', function(){
+      fail(new Error('Ошибка'));
+    });
+    request.send();
+  });
+}
   
 
 
